<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.HomeActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <TextView
                android:onClick="showTest"
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/write"
                android:textSize="24sp"

                android:textStyle="normal|bold" />
        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <include layout="@layout/content_home" />

    <!--<android.support.design.widget.FloatingActionButton-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content" -->
    <!--android:layout_gravity="bottom|center"/>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="7dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:text="@string/copyright_01"
            android:textSize="@dimen/copyright_size" />

        <!--<TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright_02"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/copyright_size"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="3dp"
            android:text="@string/copyright_03"
            android:textSize="@dimen/copyright_size" />-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright_04"
            android:textIsSelectable="true"
            android:textColor="@color/themeColor"
            android:textSize="@dimen/copyright_size"
            android:textStyle="bold" />
    </LinearLayout>
    <ImageButton
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="top|end"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="60dp"
        android:background="#00000000"
        android:onClick="setting"
        android:src="@drawable/settings_balck"
        android:scaleType="centerCrop"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>